--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,6 @@
-<% if user_signed_in? %>
   <h1>Home#index</h1>
   <p>Find me in app/views/home/index.html.erb</p>
   <%= link_to 'Salir', destroy_user_session_path,  method: :delete %>
-<% else %>
-  <%= link_to 'Iniciar', new_user_session_path %>
-<% end %>
+  <a> <%= link_to 'Check List', controller: 'lists' %> </a>
+
 
