--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -26,5 +26,5 @@
 
 <%= link_to 'New List', new_list_path %>
 <a> <%= link_to 'Inicio', controller: 'home' %> </a>
-<a href="/lists.pdf"><button class="btn btn-outline-info">Convert PDF</button></a>
-
+<a href="/lists.pdf" target="_blank"><button class="btn btn-outline-info">Convert PDF</button></a>
+g
