--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -39,5 +39,6 @@
     </p>
   <% end %>
 
-<%= link_to 'Edit', edit_list_path(@list) %> |
+<%= link_to 'Edit', edit_list_path(@list) %> 
 <%= link_to 'Back', lists_path %>
+<button class="btn btn-outline-info"> <%= link_to "Download CSV", list_tasks_path(@list, format: "csv") %>  </button>
